--- a/01 - New Variables/var-let-const.html
+++ b/01 - New Variables/var-let-const.html
@@ -6,7 +6,21 @@
 </head>
 <body>
 <script>
+  function setWidth() {
+    var width = 100; // function scoping
+    console.log(width);
+  }
+  setWidth();
 
+  var age = 100;
+  if (age > 12) {
+    // var dogYears = age * 7; // global variable
+    let dogYears = age * 7; // block scoped
+    console.log(`You are ${dogYears} dog years old!`);
+  }
+
+  let height = 200;
+  const key = 'abc123';
 </script>
 </body>
 </html>
